<?xml version="1.0"?>
<package format="2">
  <name>kinect2_bridge</name>
  <version>0.0.1</version>
  <description>The kinect2_bridge package</description>

  <maintainer email="wiedemeyer@informatik.uni-bremen.de">Thiemo Wiedemeyer</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <!-- <build_depend>rostime</build_depend> -->
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>compressed_depth_image_transport</build_depend>
  <build_depend>kinect2_registration</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>cv_bridge</build_depend><!-- Depend on cv_bridge instead of libopencv-dev to support ROS Hydro.-->

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <!-- <exec_depend>rostime</exec_depend> -->
  <exec_depend>tf</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>compressed_depth_image_transport</exec_depend>
  <exec_depend>kinect2_registration</exec_depend>
  <!-- <exec_depend>nodelet</exec_depend> -->
  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>cv_bridge</exec_depend><!-- Depend on cv_bridge instead of libopencv-dev to support ROS Hydro.-->

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <nodelet plugin="${prefix}/nodelet_plugins.xml" /> -->
  </export>
</package>
