<?xml version="1.0"?>
<package format="2">
  <name>kinect2_registration</name>
  <version>0.0.1</version>
  <description>The kinect2_registration package</description>

  <maintainer email="wiedemeyer@informatik.uni-bremen.de">Thiemo Wiedemeyer</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>cv_bridge</depend><!-- Depend on cv_bridge instead of libopencv-dev to support ROS Hydro.-->


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
