<?xml version="1.0"?>
<package format="2">
  <name>kinect2_viewer</name>
  <version>0.0.1</version>
  <description>The kinect2_viewer package</description>

  <maintainer email="wiedemeyer@informatik.uni-bremen.de">Thiemo Wiedemeyer</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>compressed_image_transport</build_depend>
  <build_depend>compressed_depth_image_transport</build_depend>
  <build_depend>kinect2_bridge</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>cv_bridge</build_depend><!-- Depend on cv_bridge instead of libopencv-dev to support ROS Hydro.-->

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rostime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>compressed_image_transport</exec_depend>
  <exec_depend>compressed_depth_image_transport</exec_depend>
  <exec_depend>libpcl-all-dev</exec_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>cv_bridge</exec_depend><!-- Depend on cv_bridge instead of libopencv-dev to support ROS Hydro.-->

  <export>
  </export>
</package>